--- a/Lab1/style.css
+++ b/Lab1/style.css
@@ -34,3 +34,35 @@ header a {
 header a:hover {
     color: #b2dfdb;
 }
+/*-----------Header End-----------*/
+
+/* Body */
+
+.grid-galeria {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 24px;
+    padding: 32px;
+}
+
+.item-galeria {
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+    text-align: center;
+    padding: 16px;
+}
+
+.item-galeria img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.item-galeria h3 {
+    margin: 12px 0 6px 0;
+    font-size: 1.1em;
+}
+
+/*-----------Body End-----------*/
